--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./style/reset.css">
+  <link rel="stylesheet" href="./style/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Battleship</title>
 </head>
 <body>
   
+  <div id="game-container">
+
+    <div id="human-grid">
+
+   </div>
+   <div id="computer-grid">
+
+   </div>
+
+  </div>
+
 </body>
 </html>
