--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <title>Battleship</title>
 </head>
 <body>
+
+  <div id="title-div">
+    <h1>Battleship</h1>
+  </div>
   
   <div id="game-container">
 
