--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <div id="title-div">
     <h1>Battleship</h1>
   </div>
+
+  <div id="instruction-dv">
+    <h2>Place Your Ships</h2>
+  </div>
   
   <div id="game-container">
 
@@ -20,6 +24,10 @@
 
    </div>
 
+  </div>
+
+  <div id="button-div">
+    <button>Start Game</button>
   </div>
 
 </body>
