in fleet render

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,13 @@
 
     <div id="human-grid">
 
-   </div>
-   <div id="computer-grid">
+    </div>
+    <div id="computer-grid">
 
-   </div>
+    </div>
+    <div id="enemy-fleet">
+      
+    </div>
 
   </div>
 
