--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,17 @@
     <div id="human-grid">
 
     </div>
+    <div id="human-fleet">
+      <div id="drag-carrier" class="drag-ship"></div>
+      <div id="drag-battleship" class="drag-ship"></div>
+      <div id="drag-cruiser" class="drag-ship"></div>
+      <div id="drag-submarine" class="drag-ship"></div>
+      <div id="drag-destroyer" class="drag-ship"></div>
+      <div id="drag-frigate" class="drag-ship"></div>
+      <div id="drag-corvette" class="drag-ship"></div>
+      <div id="drag-gunboat" class="drag-ship"></div>
+    </div>
+
     <div id="computer-grid">
 
     </div>
