--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
 
     </div>
     <div id="human-fleet">
-      <div id="drag-carrier" class="drag-ship" draggable="true" data-ship="carrier"></div>
-      <div id="drag-battleship" class="drag-ship" draggable="true" data-ship="battleship"></div>
-      <div id="drag-cruiser" class="drag-ship" draggable="true" data-ship="cruiser"></div>
-      <div id="drag-submarine" class="drag-ship" draggable="true" data-ship="submarine"></div>
-      <div id="drag-destroyer" class="drag-ship" draggable="true" data-ship="destroyer"></div>
-      <div id="drag-frigate" class="drag-ship" draggable="true" data-ship="frigate"></div>
-      <div id="drag-corvette" class="drag-ship" draggable="true" data-ship="corvette"></div>
-      <div id="drag-gunboat" class="drag-ship" draggable="true" data-ship="gunboat"></div>
+      <div id="drag-carrier" class="drag-ship" draggable="true" data-ship="Carrier"></div>
+      <div id="drag-battleship" class="drag-ship" draggable="true" data-ship="Battleship"></div>
+      <div id="drag-cruiser" class="drag-ship" draggable="true" data-ship="Cruiser"></div>
+      <div id="drag-submarine" class="drag-ship" draggable="true" data-ship="Submarine"></div>
+      <div id="drag-destroyer" class="drag-ship" draggable="true" data-ship="Destroyer"></div>
+      <div id="drag-frigate" class="drag-ship" draggable="true" data-ship="Frigate"></div>
+      <div id="drag-corvette" class="drag-ship" draggable="true" data-ship="Corvette"></div>
+      <div id="drag-gunboat" class="drag-ship" draggable="true" data-ship="Gunboat"></div>
     </div>
 
     <div id="computer-grid">
