--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,15 @@
   <div id="page-container">
 
     <div id="title-div">
+      <div class="circle-shape-div"></div>
       <h1>Battleship</h1>
     </div>
 
     <div id="instruction-div">
-      <h2>Place Your Ships</h2>
+      <h2>Place your ships.... or auto-place (sorry mobile)</h2>
     </div>
+
+    <!-- CREATE auto place ships button for mobile -->
     
     <div id="game-container">
 
