--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
       <h2>Place your ships.... or auto-place (sorry mobile)</h2>
     </div>
 
+  
+
     <!-- CREATE auto place ships button for mobile -->
     
     <div id="game-container">
@@ -46,9 +48,13 @@
       </div>
 
     </div>
+    
+    <div id="auto-place-div">
+      <button id="auto">Auto-Place</button>
+    </div>
 
     <div id="button-div">
-      <button>Start Game</button>
+      <button id="start">Start Game</button>
     </div>
   </div>
 </body>
