--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,14 @@
 
     </div>
     
-    <div id="auto-place-div">
-      <button id="auto">Auto-Place</button>
-    </div>
-
     <div id="button-div">
-      <button id="start">Start Game</button>
+      <div id="auto-place-div">
+        <button id="auto">Auto-Place</button>
+      </div>
+
+      <div id="start-div">
+        <button id="start">Start Game</button>
+      </div>
     </div>
   </div>
 </body>
