layout done -> color

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         
         <div id="game-container">
 
-          <div id="human-section">
+          <div id="human-section" class="pre-start">
             <div id="drag-instruction">
               <ul>
                 <li> - Drag Ships to desired location</li>
