typwriter fucked positioning on start

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <div id="app-container">
         
         <div id="instruction-div">
-          <h2>Place your ships.... </h2>
+          <h2 class="instrution-h2"></h2>
         </div>
         
         <div id="game-container">
